# src/main/java/com/bank/credit/model/response/HolderInfo.java
@@ -1,0 +1,10 @@
+package com.bank.credit.model.response;
+
+import lombok.Data;
+
+@Data
+public class HolderInfo {
+    private String customerId;
+    private String name;
+    private String relationship;
+}
